# SerialMultiplexer

./: CMakeLists.txt  README.md  build.sh  serial-mux.cpp  serial-mux.h  serial-mux.h.in
test/: CMakeLists.txt  sertest.cpp  test-serial-setup.sh  test.sh
